--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^4.0.2",
     "mongoose": "^6.7.0"
   },
   "devDependencies": {
